# checkvist-cli

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
docs/: CHECKVIST_API.md  TESTING.md  checkvist-cli.1  todos.md  work_plan_chatgtp.md
src/: api.rs  cfg.rs  cli.rs  error.rs  lib.rs  log.rs  main.rs  output.rs  token_store.rs
src/commands/: backup.rs  mod.rs  request.rs
tests/: api_client.rs  cli_auth_status.rs  cli_backup.rs  cli_help.rs  cli_lists_crud.rs  cli_lists_get.rs  cli_login.rs  cli_notes.rs  cli_tasks.rs  config_and_token.rs  e2e_cli_auth_test.rs  e2e_cli_backup_test.rs  e2e_cli_lists_test.rs  e2e_cli_notes_test.rs  e2e_cli_tasks_test.rs  fake_server.py  fake_server_bin.rs
tests/common/: mod.rs
tests/fake_server/: lists.rs  mod.rs
