[package]
name = "checkvist-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions"] }
config = { version = "0.14", default-features = false, features = ["ini"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", default-features = false, features = ["json", "tls"] }
urlencoding = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serial_test = "3.2"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
