[package]
name = "checkvist-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
lexopt = "0.3"
config = { version = "0.14", default-features = false, features = ["ini"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", default-features = false, features = ["json", "native-tls"] }
urlencoding = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serial_test = "3.2"

[[bin]]
name = "fake-server"
path = "tests/fake_server_bin.rs"
test = false

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
